# work

./: .gitignore  README.md  deep-research-report (3).md  pyproject.toml  requirements.txt
.obsidian/: workspace.json
configs/: qwen25vl_smoke.yaml
data/debug/: smoke_samples.jsonl
scripts/: run_direct_answer.py  smoke_qwen25vl.py
src/prcv/: __init__.py  direct_answer.py  smoke_helpers.py
tests/: test_direct_answer_helpers.py  test_smoke_helpers.py
